fix package name
Signed-off-by: Pratheek Rebala <pratheekrebala@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copybook-2-json",
+  "name": "copybook2json",
   "version": "3.3.0",
   "description": "Transformar COPYBOOK (COBOL) em JSON.",
   "private": true,
